--- a/styles/style.css
+++ b/styles/style.css
@@ -351,11 +351,11 @@
   margin: 10px 0;
 }
 
+/* box-sizing: border-box; */
 .footer {
-  display: flex;
-  /* box-sizing: border-box; */ 
+  /* display: flex; 
 align-items: flex-start;
-justify-content: space-evenly;
+justify-content: space-evenly; */
   background-color:#1f1f1f;
   color: #f2f2f2;
   font-family: Arial, Helvetica, sans-serif;
@@ -365,35 +365,40 @@ justify-content: space-evenly;
 }
 
 .footer__columns {
-
+  display: flex;
+  gap: 80px;
+  justify-content: space-between;
 }
 
 .footer__column_content_hours {
-  padding-right: 80px;
-  padding-inline-start: 20px;
-  padding-inline-end: 16px;
+  margin-left: auto;
 }
 
 .footer__column_content_social {
-
+margin: 0;
 }
 
 
 .footer__logo {
-  size: 58px 80px;
+  width: 58px ;
+  height: 80px;
 }
 
 .footer__column-heading {
+  margin: 0 0 20px 0;
 }
 
 .footer__list {
-  /* El siguiente código elimina los estilos predeterminados del navegador para las listas */
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .footer__list-item {
+  list-style-type: none;
 }
 
 .footer__column-link {
@@ -402,13 +407,11 @@ justify-content: space-evenly;
 }
 
 .footer__social-icon {
-  size: 16px 16px;
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
 
 .footer__copyright {
-/*  
-  padding-left: 80px; 
-padding-top: 100px;
-padding-bottom: 60px;
-padding-right: 400px; */
+  margin: 100px 0 0 0;
 }
