--- a/styles/style.css
+++ b/styles/style.css
@@ -348,14 +348,13 @@
 }
 
 .step__description {
-  margin: 10px 0;
+  margin: 10px 0 0 0;
 }
 
 /* box-sizing: border-box; */
+
 .footer {
-  /* display: flex; 
-align-items: flex-start;
-justify-content: space-evenly; */
+color: #1f1f1f; 
   background-color:#1f1f1f;
   color: #f2f2f2;
   font-family: Arial, Helvetica, sans-serif;
@@ -375,7 +374,7 @@ justify-content: space-evenly; */
 }
 
 .footer__column_content_social {
-margin: 0;
+margin-left: 0;
 }
 
 
@@ -394,16 +393,19 @@ margin: 0;
   margin: 0;
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 
 .footer__list-item {
   list-style-type: none;
+  margin-bottom: 16px;
 }
 
 .footer__column-link {
   color: white;
   text-decoration: none;
+  display: flex;
+  align-items: baseline; 
+  column-gap: normal;
 }
 
 .footer__social-icon {
