--- a/styles/style.css
+++ b/styles/style.css
@@ -373,7 +373,7 @@ color: #1f1f1f;
 }
 
 .footer__column_content_social {
-margin-left: 0px;
+margin-left: 80px;
 }
 
 
@@ -403,7 +403,7 @@ margin-left: 0px;
   color: white;
   text-decoration: none;
   display: flex;
-  align-items: flex-start; 
+  align-items: baseline; 
   column-gap: 20px;
 }
 
