--- a/styles/style.css
+++ b/styles/style.css
@@ -407,6 +407,7 @@ margin-left: 80px;
   text-decoration: none;
   display: flex;
   align-items: center; 
+  column-gap: auto;
 }
 
 .footer__social-icon {
